# CloudAgent-Platform

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cloud/hfs/: .dockerignore  AGENTS.md  BUILD_SOURCE.txt  BUNDLE_MANIFEST.json  Dockerfile  README.md  app.py  build_runtime_snapshot.sh  export_space_bundle.sh  healthcheck.sh  hfs-dev.toml  smoke_mounted_runtime.sh  start.sh
src/cloudagent_platform/: __init__.py  admin.py  app.py  config.py  connectors.py  console.py  errors.py  http.py  openapi.py  permissions.py  runtime.py  scheduler.py  showcase.py  status.py  tools.py  utils.py  worker.py
src/cloudagent_platform/web/: console.css  console.js  index.html
tests/: test_backend_hardening.py  test_console_design_contract.py  test_local_prototype.py  test_release_contracts.py  test_showcase_api.py
