[project]
name = "cloudagent-platform"
version = "0.1.0"
description = "API-first cloud Agent cluster platform prototype."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cloudagent-platform = "cloudagent_platform.app:main"
cloudagent-worker = "cloudagent_platform.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
